# implicit-planning-in-llms

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments-denis/: 2025-04-30-KL-divergence_and_generation_from_token_k.ipynb  KL_evaluationplotting.ipynb  README.md
experiments-denis/2025-04-21/: observations_on_quick_rhymes.ipynb
experiments-denis/2025-04-22-unembed_and_save_steeting_vector/: messing_with_steering_vector.ipynb  steering_vector_from_quick_to_pain.pt  steering_vector_to_rabbit_form_habit.pt  unembed_and_save_steeting_vector.ipynb
experiments-denis/2025-04-23-plot-steering-across-layers/: data_for_unrhymed_steering.py  layer_analysis_results.csv  layer_analysis_results_all_pain_prompts.csv  plot_steeering_across_layers.ipynb  steering_vector_quick_to_pain_layer_13.pt  steering_vector_quick_to_pain_layer_14.pt  steering_vector_quick_to_pain_layer_15.pt  steering_vector_quick_to_pain_layer_16.pt  steering_vector_quick_to_pain_layer_17.pt  steering_vector_quick_to_pain_layer_18.pt  steering_vector_quick_to_pain_layer_19.pt  steering_vector_quick_to_pain_layer_20.pt  steering_vector_quick_to_pain_layer_21.pt  steering_vector_quick_to_pain_layer_22.pt  steering_vector_quick_to_pain_layer_23.pt  steering_vector_quick_to_pain_layer_24.pt  steering_vector_quick_to_pain_layer_25.pt  steering_vector_quick_to_pain_layer_26.pt  steering_vector_quick_to_pain_layer_27.pt  steering_vector_quick_to_pain_layer_28.pt  steering_vector_quick_to_pain_layer_29.pt  steering_vector_quick_to_pain_layer_30.pt  (+12 more)
utils/: data.py  example_util.py  llm_utils.py
(+342 files in other folders)
