[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "implicit-planning-in-llms"
version = "0.1.0"
description = "Implicit planning in LLMs"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
include = ["utils*"] 